# PlaySmart-Dashboard-Buas-Main

./: README.md
electron_application/: .gitignore  README.md
electron_application/backend/: pyproject.toml
electron_application/backend/app/: database.py  main.py
electron_application/backend/app/crud/: feedback.py  users.py
electron_application/backend/app/models/: database_models.py  users.py
electron_application/backend/app/router/: coach.py  feedback.py  hive.py  match_analytics.py  session_context.py  toolkit.py
electron_application/backend/app/services/: biometric_processor.py  inference.py
electron_application/electron-app/: package-lock.json
electron_application/electron-app/src/: App.tsx
electron_application/electron-app/src/components/: videoplayer.tsx
electron_application/electron-app/src/pages/: GameSelection.tsx  SignUp.tsx
electron_application/electron-app/src/pages/coach/: ValorantDashboard.tsx  ValorantErrorPatterns.tsx  ValorantMatchDashboard.tsx  ValorantRecordingList.tsx  Valorantrecordinganalysis.tsx
electron_application/electron-app/src/pages/player/: LoLMatchDashboard.tsx  LoLRecordingList.tsx  ValorantDashboard.tsx  ValorantMatchDashboard.tsx  ValorantRecordingList.tsx  Valorantfeedbackreview.tsx  toolkitsetup.tsx
electron_application/electron-app/src/services/: api.ts
electron_application/electron-app/src/types/: index.ts
